Fixed self path location on windows