@@ -1,6 +1,7 @@
 package com.juanmuscaria.dmm.util;
 
 import com.juanmuscaria.dmm.ModManagerApplication;
+import lombok.SneakyThrows;
 import org.apache.commons.io.FileUtils;
 import org.apache.commons.lang3.SystemUtils;
 import org.slf4j.Logger;
@@ -11,6 +12,7 @@ import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
@@ -198,8 +200,9 @@ public class DuskersHelper {
     }
 
 
+    @SneakyThrows
     public static Path getSelfPath() {
-        return Path.of(ModManagerApplication.class.getProtectionDomain()
-            .getCodeSource().getLocation().getPath()).toAbsolutePath();
+        return Paths.get(ModManagerApplication.class.getProtectionDomain()
+            .getCodeSource().getLocation().toURI()).toAbsolutePath();
     }
 }
